# Parallels

./: readme.md
CMakeVersion/: CMakeLists.txt  readme.md
Lab1/CMakeVersion/: CMakeLists.txt  lab1.cpp
Lab1/MakeVersion/: Makefile
Lab2/task3/: makefile  task3_2.cpp
Lab3/task1/: makefile  task1.cpp
Lab3/task2/: .gitignore  client_server.hpp  funcs.hpp  main.cpp  makefile  test  test.cpp
Lab4/: camera.py
Lab5/: multy_yolo.py
Lab6/: cpu.cpp  easier.cpp  gpu.cpp  makefile  non_parallel.cpp  report.docx  report1.nsys-rep  report1.sqlite  report2.nsys-rep  report2.sqlite
Lab7/: gpu.cpp  makefile
Lab8/: Makefile  graph.cu  old.cu  report.docx
MakeVersion/: readme.md
lab2/: easier  easier.cpp  integral.cpp  makefile  mat_vec.cpp  res_integral.csv  res_mat_vec.csv
lab2/task3/: functions.cpp  makefile  task3_1.cpp  task3_2.cpp
lab3/: makefile  task2.cpp  task2_old.cpp
